--- a/estilos_cafetera.css
+++ b/estilos_cafetera.css
@@ -1,8 +1,92 @@
+*{
+    font-family: 'Roboto Mono', monospace;
+}
+body{
+    background-color: grey;
+}
+.contenedor{
+    margin: auto;
+    width: 50%;
+    min-height: 700px;
+    border-radius: 50px;
+    background-color: rgb(119, 72, 38);
+    color: whitesmoke;
+    border: honeydew solid 2px;
+    padding: 16px;
+}
+h1{
+    font-family: 'Cabin', sans-serif;
+    text-align: center;
+    margin: 16px;
+    padding: 8px;
+    font-size: 4rem;
+
+}
+.chinche{
+    position: relative;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: rgb(202, 6, 6);
+    box-shadow: 4px 5px 15px 0px #000000;
+    left: 210px;
+    top: 40px;
+    z-index: 1;
+    
+}
+.descripcion{
+    width: 40%;
+    background-color: rgb(185, 185, 5);
+    padding: 16px;
+    padding-top: 32px;
+    position: relative;
+    left: 50px;
+    font-family: 'Indie Flower', cursive;
+}
+
+#menu{
+    background-color: whitesmoke;
+    color: black;
+    border-radius: 10px;
+    padding: 8px;
+    list-style: none;
+}
+
+#menuGeneral{
+    position: absolute;
+    width: 10%;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    left: 950px;
+    bottom: 130px;
+    justify-content: space-evenly;
+}
+
+#menuGeneral button{
+    padding: 8px;
+    border-radius: 10px;
+    font-family: 'Roboto Mono', monospace;
+}
+
+form{
+    font-family: 'Roboto Mono', monospace;
+    position: relative;
+    left: 24px;
+    }
+form button{
+    font-family: 'Roboto Mono', monospace;
+    border-radius: 10px;
+    padding: 8px;
+    }
+
 #formNuevaBebida{
     border: 2px solid black;
     padding: 8px;
     margin: 2rem;
-    max-width: 250px;
+    width: 350px;
+    background-color: rgba(245, 245, 245, 0.808);
+    color: rgb(119, 72, 38);
     
 }
 
@@ -33,6 +117,8 @@
 
 .botonDinero{
     padding: 16px;
+    height: 4rem;
+    width: 4rem;
     border-radius: 50%;
     margin: 24px;
 }
