--- a/estilos_cafetera.css
+++ b/estilos_cafetera.css
@@ -74,7 +74,7 @@ form{
     position: relative;
     left: 24px;
     }
-form button{
+form button, button{
     font-family: 'Roboto Mono', monospace;
     border-radius: 10px;
     padding: 8px;
@@ -125,4 +125,16 @@ form button{
 
 .escondido{
     display: none;
+}
+
+#orden :hover{
+    cursor: pointer;
+}
+
+.alerta {
+    color: red;
+    background-color: whitesmoke;
+    border: 2px solid red;
+    max-width: 500px;
+    text-align: center;
 }
